madsErNice is in effect, fuckers

--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -47,13 +47,7 @@ Test
 \begin{thebibliography}{5}
 
 \footnotesize{}
-\bibitem{koenderink}A. F. Koenderink, L. Langguth, R. Fleury, A. Alù, PRL 116, 224301 (2016)
-
-\bibitem{perrin}R. Perrin, G. M. Shallowe, T. R. Moore, S. A. Zwietlow, Proceedings of the Institute of Acoustics 28.1, 653 (2006)
-
-\bibitem{rossing}T. Rossing, Am. J. Phys. 50(3), 271 (1982)
-
-\bibitem{fletcher}N. H. Fletcher, T. Rossing, The Physics of Musical Instruments (Springer 1991)
+\bibitem{fakealicious}Fake ref
 
 \end{thebibliography}
 }
