--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -37,7 +37,13 @@
 \section{Test}
 \frame{
 \frametitle{Test}
-Test
+\begin{enumerate}
+    \item Forskellige spredningsprocenter
+    \item Forskellige vaccinationsprocenter
+    \item Forskellige netværkstyper
+    \item Herd immunity threshold
+    \item Flyrejse?
+\end{enumerate}
 
 }
 
