--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -66,37 +66,6 @@
 
 }
 
-\section{Code}
-\frame{
-\frametitle{Code}
-
-\begin{figure}
-    \begin{tikzpicture}[node distance = 1cm, auto,scale=2]
-        % Place nodes
-        \node [block] (init) {Initialize model};
-        \node [cloud, left of=init] (expert) {Input args};
-        \node [block, right= of init] (identify) {Set patient zero};
-        \node [block, below= of identify] (evaluate) {Find neighbors};
-        \node [block, left= of evaluate] (transmit) {Evaluate neighbors, transmit};
-        \node [block, left= of transmit] (cure) {Evaluate sick, kill and cure};
-        \node [decision, below of=cure] (decide) {Break?};
-        \node [block, right= of decide, node distance=3cm] (update) {Update model};
-        \node [block, left of=decide, node distance=3cm] (stop) {Stop};
-        % Draw edges
-        \path [line,dashed] (expert) -- (init);
-        \path [line] (init) -- (identify);
-        \path [line] (identify) -- (evaluate);
-        \path [line] (evaluate) -- (transmit);
-        \path [line] (transmit) -- (cure);
-        \path [line] (decide) -- node {No} (update);
-        \path [line] (update) -| (evaluate);
-        \path [line] (decide) -- node {Yes} (stop);
-        \path [line] (cure) -- (decide);
-    \end{tikzpicture}
-\end{figure}
-
-}
-
 \section{Herd immunity}
 \frame{
 \frametitle{Herd immunity}
@@ -141,6 +110,37 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
 
 }
 
+\section{Code}
+\frame{
+\frametitle{Code}
+
+\begin{figure}
+    \begin{tikzpicture}[node distance = 1cm, auto,scale=2]
+        % Place nodes
+        \node [block] (init) {Initialize model};
+        \node [cloud, left of=init] (expert) {Input args};
+        \node [block, right= of init] (identify) {Set patient zero};
+        \node [block, below= of identify] (evaluate) {Find neighbors};
+        \node [block, left= of evaluate] (transmit) {Evaluate neighbors, transmit};
+        \node [block, left= of transmit] (cure) {Evaluate sick, kill and cure};
+        \node [decision, below of = transmit] (decide) {Break?};
+        \node [block, right= of decide, node distance=3cm] (update) {Update model};
+        \node [block, left= of decide, node distance=3cm] (stop) {Stop};
+        % Draw edges
+        \path [line,dashed] (expert) -- (init);
+        \path [line] (init) -- (identify);
+        \path [line] (identify) -- (evaluate);
+        \path [line] (evaluate) -- (transmit);
+        \path [line] (transmit) -- (cure);
+        \path [line] (decide) -- node {No} (update);
+        \path [line] (update) -- (evaluate);
+        \path [line] (decide) -- node {Yes} (stop);
+        \path [line] (cure) -- (decide);
+    \end{tikzpicture}
+\end{figure}
+
+}
+
 \section{Networks}
 \frame{
 \frametitle{Networks}
@@ -163,7 +163,7 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
     \begin{axis} [
         xticklabels={,,},
         yticklabels={,,},
-        title={Custom network, simulating two towns with commuters},
+        title={Custom network, simulating two cities with commuters},
         hide axis
         ]
         \addplot graphics [xmin=0,xmax=10,ymin=0,ymax=1] {../mads/test.png};
@@ -189,9 +189,10 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
         \item Unable to define percolation
         \item Discussion of alternate criteria
         \begin{itemize}[label=\textbullet]
-            \item Total sick \( < \) arbitrary threshold
+            \item \textbf{Total sick \( < \) arbitrary threshold}
             \item Effective reproductive number \( \leq 1 \)
             \item \( n_{\text{sick}} = 0 \) and \( n_{\text{healthy}} \neq 0 \)
+            \item \( n_{\text{healthy}} = 0 \)
         \end{itemize}
     \end{itemize}
 \end{itemize}
@@ -205,7 +206,7 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
 \begin{itemize}[label=\textbullet]
     \item Run each disease 50 times on each network
     \item With 20 \( p_I \) values
-    \item Save all output
+    \item Save relevant output
 \end{itemize}
 
 }
@@ -218,13 +219,24 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
     \centering
     \begin{tikzpicture}
         \begin{axis}[
-            xlabel=\% immune,
-            ylabel=\% of runs with no. of sick \( \leq 5 \),
+            xlabel=Fraction immune,
+            ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Ebola, small world, \( N = 1000 \)},
             mlineplot,
-            cycle list=mlineplot cycle
+            cycle list=mlineplot cycle,
+            xmin=0,
+            ymin=0.9,
+            y tick label style={
+                    /pgf/number format/.cd,
+                    fixed,
+                    fixed zerofill,
+                    precision=2,
+                    /tikz/.cd
+                }
             ]
             \addplot [only marks,error bars/.cd,y dir = both,y explicit] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/ebola_smallworld.csv};
+            \draw [dashed,red] (0.33,0) -- (0.33,1.3);
+            \draw [dashed,red] (0.6,0) -- (0.6,1.3);
         \end{axis}
     \end{tikzpicture}
 \end{figure}
