--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -158,7 +158,7 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
 \frametitle{Movie time: two cities, death}
 
 \centering
-\href{run:/Users/mads/NumericalMethodsProject/beamer/test.m4v}{\includegraphics[scale=0.2]{test.png}}
+\href{run:test.m4v}{\includegraphics[scale=0.2]{test.png}}
 
 }
 
