--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -158,18 +158,18 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
 \frametitle{Movie time: two cities, death}
 
 \centering
-\href{run:test.m4v}{\includegraphics[scale=0.2]{test.png}}
+\href{run:test.m4v}{Movie time: two cities, death}
 
 }
 
-% \section{Networks}
-% \frame{
-% \frametitle{Movie time: two cities, immunity}
-%
-% \centering
-% \href{run:./immune1.m4v}{\includegraphics[scale=0.2]{immune1.png}}
-%
-% }
+\section{Networks}
+\frame{
+\frametitle{Movie time: two cities, immunity}
+
+\centering
+\href{run:./immune1.m4v}{Movie time: two cities, immunity}
+
+}
 
 \section{Custom network}
 \frame{
