--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -9,6 +9,7 @@
 \usepackage{url}
 \usepackage[separate-uncertainty=true]{siunitx}
 \usepackage{pgfplotsthemetol}
+\usepgfplotslibrary{colorbrewer}
 \usepackage{enumitem}
 \usepackage{booktabs}
 \usepackage{bm}
@@ -236,13 +237,14 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
     \centering
     \begin{tikzpicture}
         \begin{axis}[
+            legend pos=outer north east,
             xlabel=Fraction immune,
             ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Ebola, \( N = 1000, R_0=2 \)},
             mlineplot,
-            cycle list=mlineplot cycle,
             xmin=0,
-            ymin=0.9,
+            ymin=0.4,
+            cycle list = color,
             y tick label style={
                     /pgf/number format/.cd,
                     fixed,
@@ -251,7 +253,12 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
                     /tikz/.cd
                 }
             ]
-            \addplot [only marks,error bars/.cd,y dir = both,y explicit] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/ebola_smallworld.csv};
+            \addplot [only marks,red] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Ebola_smallworld.csv};
+            \addlegendentry{Small world}
+            \addplot [only marks,blue] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Ebola_scalefree.csv};
+            \addlegendentry{Scale free}
+            \addplot [only marks] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Ebola_random.csv};
+            \addlegendentry{Random}
             \draw [dashed,red] (0.33,0) -- (0.33,1.3);
             \draw [dashed,red] (0.6,0) -- (0.6,1.3);
         \end{axis}
@@ -267,13 +274,14 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
     \centering
     \begin{tikzpicture}
         \begin{axis}[
+            legend pos=outer north east,
             xlabel=Fraction immune,
             ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Polio, \( N = 1000, R_0=6 \)},
             mlineplot,
             cycle list=mlineplot cycle,
             xmin=0,
-            ymin=0.9,
+            ymin=0.4,
             y tick label style={
                     /pgf/number format/.cd,
                     fixed,
@@ -282,7 +290,12 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
                     /tikz/.cd
                 }
             ]
-            \addplot [only marks,error bars/.cd,y dir = both,y explicit] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/ebola_smallworld.csv};
+            \addplot [only marks,red] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Polio_smallworld.csv};
+            \addlegendentry{Small world}
+            \addplot [only marks,blue] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Polio_scalefree.csv};
+            \addlegendentry{Scale free}
+            \addplot [only marks] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Polio_random.csv};
+            \addlegendentry{Random}
             \draw [dashed,red] (0.8,0) -- (0.8,1.3);
             \draw [dashed,red] (0.86,0) -- (0.86,1.3);
         \end{axis}
@@ -298,13 +311,14 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
     \centering
     \begin{tikzpicture}
         \begin{axis}[
+            legend pos=outer north east,
             xlabel=Fraction immune,
             ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Measles, \( N = 1000, R_0=15 \)},
             mlineplot,
             cycle list=mlineplot cycle,
             xmin=0,
-            ymin=0.9,
+            ymin=0.4,
             y tick label style={
                     /pgf/number format/.cd,
                     fixed,
@@ -313,7 +327,12 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
                     /tikz/.cd
                 }
             ]
-            \addplot [only marks,error bars/.cd,y dir = both,y explicit] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/ebola_smallworld.csv};
+            \addplot [only marks,red] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Measles_smallworld.csv};
+            \addlegendentry{Small world}
+            \addplot [only marks,blue] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Measles_scalefree.csv};
+            \addlegendentry{Scale free}
+            \addplot [only marks] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/csv/Measles_random.csv};
+            \addlegendentry{Random}
             \draw [dashed,red] (0.92,0) -- (0.92,1.3);
             \draw [dashed,red] (0.94,0) -- (0.94,1.3);
         \end{axis}
