--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -322,19 +322,17 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
 
 }
 
-\frame{
-\frametitle{Results}
-
-Video Galore
-
-}
-
 
 
 \section{Conclusion}
 \frame{
 \frametitle{Conclusion}
-noget
+
+\begin{itemize}
+    \item noget med krav
+    \item opdel kode?
+    \item noget mere?
+\end{itemize}
 
 
 }
