--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -241,7 +241,7 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
             xlabel=Fraction immune,
             ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Ebola, \( N = 1000, R_0=2 \)},
-            mlineplot,
+            %mlineplot,
             xmin=0,
             ymin=0.4,
             cycle list = color,
@@ -278,7 +278,7 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
             xlabel=Fraction immune,
             ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Polio, \( N = 1000, R_0=6 \)},
-            mlineplot,
+            %mlineplot,
             cycle list=mlineplot cycle,
             xmin=0,
             ymin=0.4,
@@ -315,7 +315,7 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
             xlabel=Fraction immune,
             ylabel=Fraction of runs with no. of sick \( \leq 5 \),
             title={Measles, \( N = 1000, R_0=15 \)},
-            mlineplot,
+            %mlineplot,
             cycle list=mlineplot cycle,
             xmin=0,
             ymin=0.4,
