--- a/beamer/main.tex
+++ b/beamer/main.tex
@@ -335,7 +335,42 @@ Polio            & 5-7           & 0.15-0.30               & 0.80-0.86 \\ \botto
 
 }
 
+\frame{
+\frametitle{Results}
 
+\begin{figure}
+    \centering
+    \begin{tikzpicture}
+        \begin{axis}[
+            legend pos=outer north east,
+            xlabel=Fraction immune,
+            ylabel=Fraction of runs with no. of sick \( \leq 5 \),
+            title={Two cities, \( N = 1000 \)},
+            %mlineplot,
+            cycle list=mlineplot cycle,
+            xmin=0,
+            ymin=0,
+            y tick label style={
+                    /pgf/number format/.cd,
+                    fixed,
+                    fixed zerofill,
+                    precision=2,
+                    /tikz/.cd
+                }
+            ]
+            \addplot [only marks,red] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/Polio_twoCity.csv};
+            \addlegendentry{Polio}
+            \addplot [only marks,blue] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/Measles_twoCity.csv};
+            \addlegendentry{Measles}
+            \addplot [only marks] table [col sep=comma,x index = {0}, y index = {1}, y error index = {2}] {../nikolai/Sars_twoCity.csv};
+            \addlegendentry{Ebola}
+            \draw [dashed,red] (0.92,0) -- (0.92,1.3);
+            \draw [dashed,red] (0.94,0) -- (0.94,1.3);
+        \end{axis}
+    \end{tikzpicture}
+\end{figure}
+
+}
 
 \section{Conclusion}
 \frame{
